--- a/random/hate-mr-j/index.html
+++ b/random/hate-mr-j/index.html
@@ -24,13 +24,7 @@ position: absolute;
 top: 70px;
 left: 90px;
 }
-  #bW92ZSB5ZXMgbm8gbXIgago= {
-
-
-
-
-
-  }  </style>
+   </style>
 </head>
 <body>
   <h1>do you hate mr j</h1> 
