--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://seva3125.github.io/s/seva3125.github.io.css">
 </head>
 <body>
- 
+ <div id="html"></div>
+ <div name="text">
+<pre>this is my site</pre>
+
+ </div>
 </body>
 </html>
