--- a/profile/index.html
+++ b/profile/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://seva3125.github.io/s/seva3125.github.io.css">
+    
 </head>
 <body>
- <div id="html"></div>
-<h1 id="title">this is my site</h1>
+    <script src="./profile/js/js.js"></script>
 </body>
 </html>
