--- a/profile/index.html
+++ b/profile/index.html
@@ -6,6 +6,6 @@
     
 </head>
 <body>
-    <script src="./profile/js/js.js"></script>
+    <script src="https://seva3125.github.io/profile/js/js.js"></script>
 </body>
 </html>
