--- a/random/hate-mr-j/index.html
+++ b/random/hate-mr-j/index.html
@@ -30,7 +30,7 @@ left: 90px;
   <h1>do you hate mr j</h1> 
   <div id="bW92ZSB5ZXMgbm8gbXIgago="><button id="yes" onclick="yes()">yes</button>
     <button id="no" onclick="no()">no</button>
-    <img onclick="ask()" id="img" src="https://lh6.googleusercontent.com/cahzHhx2EtA9_Dl1QMIPVLsION-gfP1pSSY9uPwgvRmQ-D7u71AN9ntm9ZzFkt3YECWOZm0DDyt1HI__yT6lRUurWUMM3iJ5cM1yQSbhNJEbP_NJM0u7=w1280" alt="">
+    <img onclick="ask()" id="img" src="https://seva3125.github.io/random/hate-mr-j/a/img.jpg" alt="">
 </div><script>
 function yes() {
 alert("you are the best")
