--- a/rickroll/index.html
+++ b/rickroll/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <img src=".dagif.gif" width="100%" height="100%">
-    <audio src=".rickroll.mp3" autoplay loop></audio>.
+    <img src="dagif.gif" width="100%" height="100%">
+    <audio src="rickroll.mp3" autoplay loop></audio>.
 </body>
 </html>
