--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <meta http-equiv="Refresh" content="0; url='rickroll'" />
+    <title>Rickrolled</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-    
+    <img src="dagif.gif" width="100%" height="100%">
+    <audio src="rickroll.mp3" autoplay loop></audio>.
 </body>
 </html>
