--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <img src="dagif.gif" width="100%" height="100%">
- <audio src="rickroll.mp3" autoplay loop></audio>
+ <audio autoplay loop>
+  <source src="rickroll.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
 </body>
 </html>
