--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <img src="dagif.gif" width="100%" height="100%">
  <audio autoplay loop>
-  <source src="rickroll.mp3" type="audio/mp3">
+  <source src="https://seva3125.github.io/rickroll.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 </body>
