--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 <body>
     <img src="dagif.gif" width="100%" height="100%">
- <audio autoplay loop>
-  <source src="https://seva3125.github.io/rickroll.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
+ <video controls="" autoplay="" src="https://seva3125.github.io/rickroll.mp3" type="audio/mp3" class="media-document audio mac"></video>
 </body>
 </html>
